# DamathZero

./: .clang-tidy  .gitattributes  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml
assets/dmg/: AppDMGSetup.scpt
assets/manifests/: Info.plist
src/: main.cc
src/app/: app.cc
src/game/: damath.cc  game.cc  tictactoe.cc
src/mcts/: tree.cc
src/neural/: network.cc
src/utils/: resource.mm  utils.h
